# apollo

./: ML Junior Practical Test.docx  README.md  nb.ipynb  pyproject.toml  requirements.txt
data/: emb.csv  pca_df.csv  results.csv  test.csv  test_predictions.csv  tsne_df.csv
mlruns/0/: meta.yaml
mlruns/316957149629071327/: meta.yaml
mlruns/316957149629071327/01fa92af22c042b28dd3bd09ed2f9475/: meta.yaml
mlruns/316957149629071327/077d25193fd74e9cb95aed79a41597ad/: meta.yaml
mlruns/316957149629071327/14c797775ac84fba91682bd675ecbed2/: meta.yaml
mlruns/316957149629071327/1c22fc22710941df834c16ddf3838d90/: meta.yaml
mlruns/316957149629071327/2042ea6aaecc479bbdcb123b419ae9b5/: meta.yaml
mlruns/316957149629071327/552b97036987495f9f458580b0cd7e6a/: meta.yaml
mlruns/316957149629071327/554b75f156984c9cb35fae1ba8ceebfc/: meta.yaml
mlruns/316957149629071327/72f26b0052e343ea8bce7f32bc482a73/: meta.yaml
mlruns/316957149629071327/75db5f56240348f8b0fae1b3ebec06f5/: meta.yaml
mlruns/316957149629071327/778fc78cd35944509d523d3dfcc9f563/: meta.yaml
mlruns/316957149629071327/8581f73ca9144a93a809bc0e09289a59/: meta.yaml
mlruns/316957149629071327/8701d6cdfdfe4e859823ccc0d4e7afbb/: meta.yaml
mlruns/316957149629071327/8c2a3fe962a1405381d8d1160f8a85e1/: meta.yaml
mlruns/316957149629071327/8ef906a51f314bf288c133630bee9b55/: meta.yaml
mlruns/815447596395846916/: meta.yaml
mlruns/models/knn_distance_cosine_k_13/: meta.yaml
src/: clustering.py  dashboard.py  etl.py  inference.py  main.py  nb.ipynb  plot.py  train_model.py
src/visualization/: plot.py
(+447 files in other folders)
